Displaying full device state works

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -11,15 +11,53 @@
     <string name="purpose">Приложение для управления устройством IQBell</string>
     <string name="thanks">Благодарности:</string>
     <string name="license">Лицензия: GNU General Public License, version 3 (GPLv3)</string>
-    <string name="battery">Батарея</string>
     <string name="timetable">Расписание</string>
     <string name="home">Главная</string>
     <string name="about">О приложении</string>
-    <string name="time">Время</string>
     <string name="holidays">Каникулы</string>
     <string name="send">Отправить</string>
     <string name="clear">Очистить</string>
     <string name="edit">Редактировать</string>
     <string name="connecting">Соединение…</string>
     <string name="connected">MQTT подключен</string>
+    <string name="get_time">Получить время</string>
+    <string name="unknown">Неизвестно</string>
+    <string name="manual_bells_control">Ручное управление звонками</string>
+    <string name="iqbell_time_date">Время и дата на IQBell</string>
+    <string name="new_time_date">Новые время и дата</string>
+    <string name="set_android_td">Установить дату и время Android</string>
+    <string name="data_was_sent">Данные успешно отправлены</string>
+    <string name="timetables_main_tab">Основное</string>
+    <string name="sending_data">Данные отправляются</string>
+    <string name="cancel">Отмена</string>
+    <string name="error">Ошибка</string>
+    <string name="repeat">Повторить</string>
+    <string name="error_sending">Не удалось передать данные</string>
+    <string name="error_updating_extra">Ошибка получения данных</string>
+    <string name="data_updated">Данные успешно обновлены</string>
+    <string name="timetables_second_tab">Сокращённое</string>
+    <string name="holidays_long_tab">Каникулы</string>
+    <string name="holidays_short_tab">Выходные/Сокращённые дни</string>
+    <string name="short_day">Сокращённые уроки</string>
+    <string name="holiday_day">Выходной</string>
+    <string name="choose_short_or_holiday">Короткие уроки или выходной?</string>
+    <string name="from">C</string>
+    <string name="to">по</string>
+    <string name="set_start_date">Установите начало каникул</string>
+    <string name="set_end_date">Установите конец каникул</string>
+    <string name="workshop">Совещание</string>
+    <string name="assembly">Линейка</string>
+    <string name="average_ringing">Обычный звонок</string>
+    <string name="classes">Учебный режим</string>
+    <string name="non_school_day">Неучебный день</string>
+    <string name="not_started">Уроки ещё не начались</string>
+    <string name="finished">Уроки закончились</string>
+    <string name="not_ringing">Реле выключено</string>
+    <string name="lesson_ringing">Звонок на урок</string>
+    <string name="workshop_ringing">Звонок на совещание</string>
+    <string name="assembly_ringing">Звонок на линейку</string>
+    <string name="normal_classes">Обычные уроки</string>
+    <string name="manual_bells_control_na">Ручное управление звонками не доступно</string>
+    <string name="next_bell">Следующий звонок</string>
+    <string name="time_till_next_bell">Время до него</string>
 </resources>
