--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -60,4 +60,16 @@
     <string name="normal_classes">Normal classes</string>
     <string name="next_bell">Next bell</string>
     <string name="time_till_next_bell">Time till it</string>
+    <string name="settings">Settings</string>
+    <string name="login">Sign in</string>
+    <string name="address_hint">Server address</string>
+    <string name="port_hint">Port</string>
+    <string name="username_hint">Username</string>
+    <string name="password_hint">Password</string>
+    <string name="logout">Log out</string>
+    <string name="welcome">Welcome! Log in to continue</string>
+    <string name="not_empty_warning">Fields mustn\'t be empty!</string>
+    <string name="not_valid_url_warning">Enter valid URL!</string>
+    <string name="day_off">Day Off</string>
+    <string name="sun_sat">Sunday/Saturday</string>
 </resources>
